# Python-WebDev-By-Example

./: .gitignore  README.md  database.db  fpp.msk  pyproject.toml  requirements.txt
book/: steps.txt
book-src/: 00-Chapter_0.md  01-Chapter_1.md  02-Chapter_2.md  03-Chapter_3.md  04-Chapter_4.md  05-Chapter_5.md  06-Chapter_6.md  07-Chapter_7.md  08-Chapter_8.md  09-Chapter_9.md  build.sh  fpp.epub  fpp.html  title.txt
code/: celeryconfig.py  dump.rdb  run.py  web_server.py
code/migrations/: V1__create_tables.sql  V2__add_admin_user_table.sql  V3__add_order_table.sql
code/models/: __init__.py  admin_user.py  order.py  product.py
code/tasks/: __init__.py  send_email.py
code/templates/: base.html  checkout.html  complete.html  index.html
code/templates/admin/: index.html  login.html
code/templates/admin/products/: create_product.html  edit_product.html
code/templates/products/: view_product.html
code/tests/: __init__.py  helpers.py  test_index.py
code/tests/admin/: test_admin.py
code/tests/site/: test_site.py
code/web/blueprints/: __init__.py
code/web/views/: __init__.py
code/web/views/admin/: __init__.py  admin.py
code/web/views/site/: __init__.py  site.py
models/: __init__.py  game.py  record.py  runner.py
web/: __init__.py
web/templates/game/: create_form.html  index.html
web/templates/record/: create_form.html
web/templates/runner/: create_form.html
web/views/: __init__.py  blueprints.py
web/views/game/: forms.py  routes.py
web/views/record/: forms.py  routes.py
web/views/runner/: forms.py  routes.py
