[tool.poetry]
name = "flask-peewee-pytest"
version = "0.1.0"
description = ""
authors = ["Dvlv <Dvlv@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.2"
peewee = "^3.14.8"
pytest = "^7.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
